[package]
name = "ai_cup"
version = "0.1.0"
authors = ["Lorenzo Ferri <lorenzo.ferri@usi.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.26.1"
rand = "0.8.3"
rand_pcg = "0.3.0"
rand_seeder = "0.2.2"